Revise and unify Eleva Care history content in all languages
Updated the Eleva Care history/introduction text in Brazilian Portuguese, English, Spanish, and European Portuguese for clarity, consistency, and tone. The new versions focus on the founder's journey, the motivation behind Eleva Care, the mission, and a call to share the vision, while removing previous open letters and PS sections. This brings all language versions in line with the current messaging and structure.

--- a/content/history/br.mdx
+++ b/content/history/br.mdx
@@ -50,77 +50,49 @@ import Image from 'next/image';
 
 <div className="prose prose-lg prose-gray max-w-none">
 
-## Caros amigos, parceiros e futuros usuários,
+## Olá!
 
-Escrevo esta carta não de uma sala de reuniões ou de um escritório polido, mas de um lugar de profunda convicção de que o sistema de saúde—especificamente a saúde das mulheres—está quebrado de maneiras que exigem nossa atenção imediata.
+Olá! Eu sou a Patrícia Mota, fisioterapeuta, e gostaria de compartilhar com vocês como surgiu a Eleva Care.
 
-Há três anos, minha parceira enfrentou o que deveria ter sido uma jornada rotineira de cuidados de saúde. Em vez disso, tornou-se um labirinto de especialistas que não conversavam entre si, conselhos contraditórios, meses de espera por consultas, e a sensação constante de que ela era apenas mais um prontuário em vez de uma pessoa completa com necessidades únicas.
+O movimento faz parte da minha vida desde cedo—primeiro na ginástica rítmica, depois na natação sincronizada. Quando me tornei fisioterapeuta, trabalhava principalmente com problemas musculoesqueléticos e ortopédicos. Foi aí que me deparei com um desafio: quando minhas pacientes engravidavam, eu não me sentia preparada para responder às suas dúvidas. Confesso que me incomodava não ter respostas claras para quem confiava em mim.
 
-Isso não foi um incidente isolado. Era a norma.
+## A Jornada Acadêmica
 
-**O sistema de saúde não foi projetado para as mulheres.** Foi projetado em torno de um único arquétipo—o homem de 70 quilogramas—e todo o resto foi considerado uma variação. As preocupações de saúde das mulheres eram minimizadas, sua dor dispensada, seus ciclos hormonais complexos ignorados.
+Esse sentimento me levou a fazer um Doutorado em Biomecânica com a Professora Kari Bø, pesquisando como os músculos abdominais se adaptam durante a gestação e após o parto. Nesse período, tornei-me mãe de três filhos e vivi na pele muitas das questões que estudava.
 
-Isso é inaceitável em 2024.
+Percebi algo importante: **apesar de existir uma base científica sólida, há um enorme abismo entre o conhecimento produzido e o que realmente chega às pessoas**.
 
-## O Momento em que Tudo Mudou
+## O Problema que Descobri
 
-Depois de ver inúmeras mulheres em nossa comunidade lutando com as mesmas falhas sistêmicas, percebi algo: **não íamos esperar que o sistema se consertasse sozinho.**
+Por um lado, já temos bastante evidência sobre estratégias eficazes para a saúde da mulher, mas esse conhecimento muitas vezes fica “preso” em artigos científicos de difícil acesso e compreensão para quem não é da área. A informação demora a ser traduzida para a prática clínica—e ainda mais para chegar ao público em geral.
 
-As ferramentas existem. O conhecimento existe. Os profissionais dedicados existem. O que está faltando é uma plataforma que coloque as mulheres no centro de sua jornada de saúde, as conecte com especialistas que realmente entendam suas necessidades, e construa uma comunidade onde o conhecimento seja compartilhado, não acumulado.
+Ao mesmo tempo, vemos todos os dias nas redes sociais promessas de soluções rápidas para problemas complexos da saúde feminina: desde o “corpo de antes da gravidez” recuperado em tempo recorde até exercícios milagrosos para a incontinência urinária. O mais preocupante é que essas “soluções” costumam ser apenas estratégias de marketing bem elaboradas, sem nenhum fundamento científico.
 
-Foi quando a Eleva Care nasceu.
+**O que me preocupa não é apenas a desinformação, mas como ela pode afastar as mulheres de abordagens que realmente funcionam**, baseadas em evidência científica e experiência clínica. Sintomas como incontinência, dor pélvica, disfunções sexuais ou alterações musculoesqueléticas têm soluções comprovadas que muitas vezes não chegam a quem precisa delas.
 
-## Nossa Filosofia Simples
+## O Momento da Inspiração
 
-Acreditamos em três coisas:
+Nos últimos dois anos, enquanto trabalhava em um projeto de pesquisa na Califórnia com a Jenny Bagwell, senti falta das minhas pacientes. Essa distância me fez pensar: por que não criar uma forma de levar informação de qualidade e cuidados especializados a todas as mulheres, independentemente de onde estejam?
 
-1. **As mulheres merecem cuidados de saúde projetados para elas.** Não adaptados. Não modificados. Projetados do zero para a complexidade e beleza da saúde feminina.
+Foi então que o Rodrigo, meu marido, juntou todas essas peças e criou a plataforma Eleva Care. Talvez estejamos reinventando um pouco a roda, afinal.
 
-2. **A expertise deve ser acessível.** Os melhores profissionais de saúde não devem estar disponíveis apenas para aqueles que podem pagar serviços premium concierge ou vivem em grandes áreas metropolitanas.
+## Nossa Missão
 
-3. **A comunidade cura.** Quando as mulheres compartilham suas experiências, se apoiam mutuamente e aprendem juntas, a mágica acontece.
+Queremos construir uma ponte entre a ciência mais atual e as pessoas que precisam dela, mas de forma verdadeiramente acessível—cuidados em saúde da mulher de nível mundial, disponíveis quando e onde forem necessários.
 
-Essas não são apenas palavras bonitas em um site. São os princípios que orientam cada decisão que tomamos.
+Nossa visão é simples: permitir que qualquer mulher possa agendar uma consulta com especialistas líderes em saúde feminina, de acordo com seu horário e sua localização—não o contrário.
 
-## O que Estamos Construindo
+## A Equipe que Me Enche de Orgulho
 
-A Eleva Care não é apenas mais uma plataforma de telemedicina ou sistema de agendamento de consultas. Estamos construindo algo diferente:
+Quando compartilhei essa ideia com colegas que admiro, a resposta foi imediata e calorosa. Hoje temos um grupo de conselheiros que me enchem de orgulho e gratidão. São profissionais extremamente experientes, verdadeiras referências em suas áreas de atuação.
 
-**Um lugar onde você pertence.** Seja navegando pela fertilidade, gravidez, mudanças hormonais, condições crônicas, ou simplesmente querendo otimizar sua saúde—você tem um lar aqui.
+Mais que isso, são pessoas por quem tenho um carinho enorme e que já contribuíram significativamente para o que a Eleva Care é hoje. A generosidade deles em compartilhar conhecimento, experiência e visão tem sido essencial para o nosso crescimento.
 
-**Cuidado especializado, reimaginado.** Nossa rede inclui especialistas em saúde feminina, nutricionistas, profissionais de saúde mental e coaches de bem-estar que entendem que sua saúde é mais do que a soma de seus sintomas.
+Ao mesmo tempo, estamos formando uma equipe clínica com profissionais em quem confio profundamente, que compartilham os mesmos valores e a mesma paixão por cuidados baseados em evidências.
 
-**Tecnologia que serve à humanidade.** Cada recurso que construímos faz uma pergunta: "Isso melhora a jornada de saúde de uma mulher?" Se a resposta não for um sim retumbante, não construímos.
+A Eleva Care está dando seus primeiros passos, já com consultas online em andamento. Estamos aprendendo e crescendo a cada dia. Se você se identifica com essa visão—como profissional que deseja colaborar ou como pessoa que busca cuidados baseados em evidência—a porta está aberta. Queremos que cada mulher que nos procure saiba que receberá orientações fundamentadas na melhor evidência científica disponível e na experiência clínica de profissionais especializados.
 
-## O Caminho à Frente
-
-Construir mudança significativa na área da saúde não é fácil. Requer paciência, persistência e coragem para desafiar sistemas que existem há décadas.
-
-Não estamos tentando mover rápido e quebrar coisas. Estamos tentando nos mover cuidadosamente e curar coisas.
-
-Alguns dias são mais difíceis que outros. Quando as empresas de seguro resistem, quando as regulamentações parecem intransponíveis, quando os desafios técnicos parecem avassaladores—esses são os dias quando lembramos por que começamos.
-
-**Começamos porque os cuidados de saúde deveriam ser um direito humano, não um privilégio.**
-
-Começamos porque toda mulher merece se sentir ouvida, compreendida e cuidada.
-
-Começamos porque o status quo não é suficiente.
-
-## Um Convite
-
-Esta carta não é apenas nossa história—é um convite para fazer parte de algo maior.
-
-Seja você uma profissional de saúde que compartilha nossa visão, uma mulher buscando cuidados melhores para si mesma ou seus entes queridos, ou simplesmente alguém que acredita que podemos fazer melhor—queremos você conosco.
-
-A mudança não acontece em salas de reuniões ou através de anúncios de capital de risco. Acontece uma conversa de cada vez, um relacionamento de cada vez, uma mulher se sentindo verdadeiramente cuidada de cada vez.
-
-**Junte-se a nós.**
-
-Não porque somos perfeitas—não somos. Não porque temos todas as respostas—não temos. Junte-se a nós porque você acredita, como nós, que os cuidados de saúde das mulheres podem e devem ser melhores.
-
-Juntas, não estamos apenas construindo uma plataforma. Estamos construindo um movimento.
-
-E movimentos mudam o mundo.
+Compartilhe essa visão com suas tias, tios, primas, amigas e familiares que buscam informações sobre saúde feminina. Ajude-nos a espalhar o conhecimento de forma acessível e de qualidade.
 
 ---
 
@@ -129,8 +101,6 @@ _Com dedicação à ciência e cuidado genuíno,_
 **Patrícia Mota**  
 _Fundadora, Eleva Care_  
 _Fisioterapeuta e Doutora em Biomecânica_
-
-_P.S. Se você compartilha dessa visão como profissional, ou como alguém que busca cuidados baseados em evidências, adoraria conhecer você. [Esta comunidade cresce a cada voz que se junta a nós](/pt-br/about#join-our-network)._
 
 </div>
 
