--- a/content/history/en.mdx
+++ b/content/history/en.mdx
@@ -55,43 +55,47 @@ import Image from 'next/image';
 
 ## Hello!
 
-I'm Patrícia Mota, a physiotherapist, and I wanted to share with you how Eleva Care came to be.
+Hi! I'm Patrícia Mota, a physical therapist, and I'd like to share with you how Eleva Care was born.
 
-Movement has been part of my life since I was little - first in rhythmic gymnastics, then in synchronized swimming. When I became a physiotherapist, I worked mainly with musculoskeletal and orthopedic problems. That's when I encountered a challenge: when my patients became pregnant, I didn't feel prepared to answer their questions. I'll admit it bothered me not having clear answers for those who trusted me.
+Movement has been part of my life since I was a child—first through rhythmic gymnastics, then through synchronized swimming. When I became a physical therapist, I worked mainly with musculoskeletal and orthopedic conditions. That's when I faced a challenge: when my patients became pregnant, I didn't feel prepared to answer their questions. I'll admit, it bothered me not to have clear answers for people who trusted me.
 
 ## The Academic Journey
 
-This feeling led me to pursue a PhD in Biomechanics with Professor Kari Bø, studying how abdominal muscles adapt during pregnancy and after childbirth. Meanwhile, I became a mother of three children and experienced firsthand many of the issues I was studying.
+This feeling led me to pursue a PhD in Biomechanics with Professor Kari Bø, studying how abdominal muscles adapt during pregnancy and after childbirth. Meanwhile, I became a mother of three and personally experienced many of the issues I was researching.
 
-I realized something important: **despite solid scientific research existing, there's an enormous gap between the knowledge produced and what reaches people.**
+I realized something important: **although strong scientific evidence exists, there's a huge gap between the knowledge being produced and what actually reaches people**.
 
 ## The Problem I Discovered
 
-On one hand, we already have substantial evidence about effective strategies for women's health, but this knowledge often remains "trapped" in scientific articles that are difficult to access and understand for those not in the field. Information takes time to be translated into clinical practice and even longer to reach the general public.
+On one hand, we already have a lot of evidence about effective strategies for women's health, but this knowledge often remains "trapped" in scientific articles that are hard to access and understand for those outside the field. It takes time for information to be translated into clinical practice—and even longer to reach the general public.
 
-At the same time, we see daily on social media promises of quick solutions for complex women's health issues - from "returning to the pre-pregnancy body" in record time to miraculous exercises for urinary incontinence. Most concerning is that these "solutions" are often just sophisticated marketing strategies, without any scientific foundation.
+At the same time, we see daily on social media countless promises of quick fixes for complex women's health issues—from "getting your pre-pregnancy body back" in record time to miracle exercises for urinary incontinence. The most concerning part is that these so-called "solutions" are often nothing more than clever marketing, with no scientific foundation.
 
-**What worries me is not just the misinformation, but how it can drive women away from approaches that actually work**, based on scientific evidence and clinical experience. Symptoms like incontinence, pelvic pain, sexual dysfunction, or musculoskeletal changes have proven solutions that often don't reach those who need them.
+**What worries me isn't just misinformation itself, but how it can pull women away from approaches that truly work**—those based on solid science and clinical experience. Symptoms like incontinence, pelvic pain, sexual dysfunction, or musculoskeletal changes have proven solutions that often don't reach the women who need them.
 
 ## The Moment of Inspiration
 
-In the past two years, while working on a research project in California with Jenny Bagwell, I missed my patients. This distance made me think: **why not create a way to bring quality information and specialized care to all women, regardless of where they are?**
+Over the last two years, while working on a research project in California with Jenny Bagwell, I missed my patients deeply. That distance made me think: why not create a way to deliver high-quality information and specialized care to women everywhere, regardless of where they live?
 
-That's when Rodrigo, my husband, put all these pieces together and created the Eleva Care platform. Perhaps we're reinventing the wheel a bit, after all.
+That's when Rodrigo, my husband, brought all these pieces together and created the Eleva Care platform. Maybe we're reinventing the wheel a little bit, after all.
 
 ## Our Mission
 
-We want to build a bridge between the most current science and the people who need it, but in a truly accessible way - **world-class women's healthcare, available when and where it's needed.**
+We want to build a bridge between cutting-edge science and the people who need it, but in a truly accessible way—world-class women's health care, available whenever and wherever it's needed.
 
-Our vision is simple: allow any woman to book appointments with leading specialists in women's health, adapting to her schedule and location, not the other way around.
+Our vision is simple: to make it possible for any woman to schedule an appointment with leading women's health specialists, adapting to her time and location—not the other way around.
 
-## The Team That Makes Me Proud
+## The Team I'm Proud Of
 
-When I spoke about this idea with colleagues I admire, the response was warm and immediate. Today we have a group of advisors who fill me with pride and gratitude. They are extraordinarily experienced professionals, true references in each of their areas of specialization.
+When I shared this idea with colleagues I admire, the response was warm and immediate. Today, we have a group of advisors who fill me with pride and gratitude. They are extraordinarily experienced professionals, true leaders in their fields.
 
-More than that, they are human beings for whom I have immense affection and who have already contributed significantly to what Eleva Care is today. Their generosity in sharing knowledge, experience, and vision has been fundamental to our growth.
+More than that, they're people I deeply care for, who have already contributed so much to what Eleva Care is today. Their generosity in sharing knowledge, experience, and vision has been essential to our growth.
 
-At the same time, we are building a clinical team composed of professionals I deeply trust, who share the same values and the same passion for evidence-based care.
+At the same time, we're building a clinical team of professionals I trust completely—people who share the same values and the same passion for evidence-based care.
+
+Eleva Care is taking its first steps, already offering online consultations. We're learning and growing every day. If you connect with this vision—whether as a professional who wants to collaborate or as someone seeking evidence-based care—our door is open. We want every woman who reaches out to us to know she'll receive guidance grounded in the best scientific evidence available and in the clinical experience of specialized professionals.
+
+Share this vision with your aunts, uncles, cousins, friends, and family members who are looking for information on women's health. Help us spread knowledge in a way that is both accessible and high-quality.
 
 ---
 
@@ -100,8 +104,6 @@ _With dedication to science and genuine care,_
 **Patrícia Mota**  
 _Founder, Eleva Care_  
 _Physiotherapist and PhD in Biomechanics_
-
-_P.S. If you share this vision as a professional, or as someone seeking evidence-based care, I’d love to connect with you. [This community grows with every voice that joins us](/about#join-our-network)._
 
 </div>
 
