--- a/content/history/es.mdx
+++ b/content/history/es.mdx
@@ -52,77 +52,49 @@ import Image from 'next/image';
 
 <div className="prose prose-lg prose-gray max-w-none">
 
-## Queridos amigos, socios y futuros usuarios,
+## ¡Hola!
 
-Les escribo esta carta no desde una sala de juntas o una oficina pulida, sino desde un lugar de profunda convicción de que el sistema de salud—específicamente la salud de las mujeres—está roto de maneras que exigen nuestra atención inmediata.
+¡Hola! Soy Patrícia Mota, fisioterapeuta, y quiero contaros cómo nació Eleva Care.
 
-Hace tres años, mi pareja enfrentó lo que debería haber sido un proceso rutinario de atención médica. En cambio, se convirtió en un laberinto de especialistas que no se comunicaban entre sí, consejos contradictorios, esperas de meses para citas, y la sensación constante de que era solo otro expediente en lugar de una persona completa con necesidades únicas.
+El movimiento forma parte de mi vida desde niña: primero con la gimnasia rítmica, después con la natación sincronizada. Cuando me convertí en fisioterapeuta, trabajaba principalmente con problemas musculoesqueléticos y ortopédicos. Fue entonces cuando me encontré con un reto: cuando mis pacientes quedaban embarazadas, no me sentía preparada para responder a sus dudas. Confieso que me incomodaba no tener respuestas claras para quienes confiaban en mí.
 
-Esto no fue un incidente aislado. Era la norma.
+## El Camino Académico
 
-**El sistema de salud no fue diseñado para las mujeres.** Fue diseñado alrededor de un solo arquetipo—el hombre de 70 kilogramos—y todo lo demás se consideraba una variación. Las preocupaciones de salud de las mujeres eran minimizadas, su dolor desestimado, sus ciclos hormonales complejos ignorados.
+Este sentimiento me llevó a hacer un Doctorado en Biomecánica con la profesora Kari Bø, investigando cómo se adaptan los músculos abdominales durante el embarazo y después del parto. Mientras tanto, me convertí en madre de tres hijos y viví en primera persona muchas de las cuestiones que estudiaba.
 
-Esto es inaceptable en 2024.
+Me di cuenta de algo importante: **a pesar de que existe evidencia científica sólida, hay un gran abismo entre el conocimiento producido y lo que realmente llega a las personas**.
 
-## El Momento en que Todo Cambió
+## El Problema que Descubrí
 
-Después de ver a innumerables mujeres en nuestra comunidad luchar con las mismas fallas sistémicas, me di cuenta de algo: **no íbamos a esperar a que el sistema se arreglara solo.**
+Por un lado, ya contamos con bastante evidencia sobre estrategias eficaces para la salud de la mujer, pero ese conocimiento suele quedar “atrapado” en artículos científicos de difícil acceso y comprensión para quienes no pertenecen al área. La información tarda en trasladarse a la práctica clínica, y aún más en llegar al público general.
 
-Las herramientas existen. El conocimiento existe. Los profesionales comprometidos existen. Lo que falta es una plataforma que ponga a las mujeres en el centro de su viaje de salud, las conecte con expertos que realmente entiendan sus necesidades, y construya una comunidad donde el conocimiento se comparta, no se acapare.
+Al mismo tiempo, vemos a diario en redes sociales promesas de soluciones rápidas para problemas complejos de salud femenina: desde el “cuerpo posparto” recuperado en tiempo récord hasta ejercicios milagrosos para la incontinencia urinaria. Lo más preocupante es que estas “soluciones” suelen ser solo estrategias de marketing sofisticadas, sin base científica alguna.
 
-Ahí fue cuando nació Eleva Care.
+**Lo que me preocupa no es solo la desinformación en sí, sino cómo puede alejar a las mujeres de enfoques que realmente funcionan**, basados en la evidencia científica y la experiencia clínica. Síntomas como la incontinencia, el dolor pélvico, las disfunciones sexuales o los cambios musculoesqueléticos tienen soluciones probadas que muchas veces no llegan a quienes más las necesitan.
 
-## Nuestra Filosofía Simple
+## El Momento de Inspiración
 
-Creemos en tres cosas:
+En los últimos dos años, mientras trabajaba en un proyecto de investigación en California con Jenny Bagwell, eché mucho de menos a mis pacientes. Esa distancia me hizo pensar: ¿por qué no crear una forma de llevar información de calidad y cuidados especializados a todas las mujeres, estén donde estén?
 
-1. **Las mujeres merecen atención médica diseñada para ellas.** No adaptada. No modificada. Diseñada desde cero para la complejidad y belleza de la salud femenina.
+Entonces Rodrigo, mi marido, reunió todas esas piezas y creó la plataforma Eleva Care. Quizá estemos reinventando un poco la rueda, después de todo.
 
-2. **La experiencia debe ser accesible.** Los mejores profesionales de la salud no deberían estar disponibles solo para quienes pueden pagar servicios premium de conserjería o viven en grandes áreas metropolitanas.
+## Nuestra Misión
 
-3. **La comunidad sana.** Cuando las mujeres comparten sus experiencias, se apoyan mutuamente y aprenden juntas, sucede magia.
+Queremos construir un puente entre la ciencia más actual y las personas que la necesitan, pero de un modo realmente accesible: atención en salud femenina de clase mundial, disponible cuando y donde sea necesaria.
 
-Estas no son solo palabras bonitas en un sitio web. Son los principios que guían cada decisión que tomamos.
+Nuestra visión es sencilla: que cualquier mujer pueda concertar una cita con especialistas líderes en salud femenina, adaptándose a su horario y ubicación, y no al revés.
 
-## Lo que Estamos Construyendo
+## El Equipo que Me Enorgullece
 
-Eleva Care no es otra plataforma de telemedicina o sistema de reserva de citas. Estamos construyendo algo diferente:
+Cuando compartí esta idea con colegas a quienes admiro, la respuesta fue inmediata y cálida. Hoy contamos con un grupo de asesores que me llena de orgullo y gratitud. Son profesionales de gran experiencia, verdaderos referentes en sus áreas de especialización.
 
-**Un lugar donde perteneces.** Ya sea que estés navegando la fertilidad, el embarazo, cambios hormonales, condiciones crónicas, o simplemente quieras optimizar tu salud—aquí tienes un hogar.
+Más allá de eso, son personas por las que tengo un enorme cariño y que ya han contribuido significativamente a lo que Eleva Care es hoy. Su generosidad al compartir conocimiento, experiencia y visión ha sido fundamental para nuestro crecimiento.
 
-**Atención experta, reimaginada.** Nuestra red incluye especialistas en salud femenina, nutricionistas, profesionales de salud mental y coaches de bienestar que entienden que tu salud es más que la suma de tus síntomas.
+Paralelamente, estamos formando un equipo clínico con profesionales en quienes confío plenamente, que comparten los mismos valores y la misma pasión por los cuidados basados en evidencia.
 
-**Tecnología que sirve a la humanidad.** Cada función que construimos hace una pregunta: "¿Esto mejora el viaje de salud de una mujer?" Si la respuesta no es un sí rotundo, no lo construimos.
+Eleva Care está dando sus primeros pasos, ya con consultas online en marcha. Estamos aprendiendo y creciendo cada día. Si te identificas con esta visión—como profesional que quiere colaborar o como persona que busca cuidados basados en evidencia—nuestra puerta está abierta. Queremos que cada mujer que nos contacte sepa que recibirá orientación fundamentada en la mejor evidencia científica disponible y en la experiencia clínica de profesionales especializados.
 
-## El Camino por Delante
-
-Construir un cambio significativo en el sistema de salud no es fácil. Requiere paciencia, persistencia y el coraje de desafiar sistemas que han existido durante décadas.
-
-No estamos tratando de movernos rápido y romper cosas. Estamos tratando de movernos reflexivamente y sanar cosas.
-
-Algunos días son más difíciles que otros. Cuando las compañías de seguros se resisten, cuando las regulaciones parecen insuperables, cuando los desafíos técnicos se sienten abrumadores—esos son los días cuando recordamos por qué comenzamos.
-
-**Comenzamos porque la atención médica debería ser un derecho humano, no un privilegio.**
-
-Comenzamos porque cada mujer merece sentirse escuchada, entendida y cuidada.
-
-Comenzamos porque el status quo no es suficiente.
-
-## Una Invitación
-
-Esta carta no es solo nuestra historia—es una invitación a ser parte de algo más grande.
-
-Ya seas un profesional de la salud que comparte nuestra visión, una mujer buscando mejor atención para ti o tus seres queridos, o simplemente alguien que cree que podemos hacerlo mejor—te queremos con nosotros.
-
-El cambio no sucede en salas de juntas o a través de anuncios de capital de riesgo. Sucede una conversación a la vez, una relación a la vez, una mujer sintiéndose verdaderamente cuidada a la vez.
-
-**Únete a nosotros.**
-
-No porque seamos perfectos—no lo somos. No porque tengamos todas las respuestas—no las tenemos. Únete a nosotros porque crees, como nosotros, que la atención médica de las mujeres puede y debe ser mejor.
-
-Juntos, no solo estamos construyendo una plataforma. Estamos construyendo un movimiento.
-
-Y los movimientos cambian el mundo.
+Comparte esta visión con tus tías, tíos, primos, amigas y familiares que busquen información sobre salud femenina. Ayúdanos a difundir el conocimiento de forma accesible y con calidad.
 
 ---
 
@@ -131,8 +103,6 @@ _Con dedicación a la ciencia y cuidado genuino,_
 **Patrícia Mota**  
 _Fundadora, Eleva Care_  
 _Fisioterapeuta y Doctora en Biomecánica_
-
-_P.S. Si compartes esta visión como profesional, o como alguien que busca cuidados basados en evidencia, me encantaría conocerte. [Esta comunidad crece con cada voz que se une a la nuestra](/es/about#join-our-network)._
 
 </div>
 
