--- a/content/history/pt.mdx
+++ b/content/history/pt.mdx
@@ -50,7 +50,7 @@ import Image from 'next/image';
 
 ## Olá!
 
-Sou a Patrícia Mota, fisioterapeuta, e queria partilhar convosco como surgiu a Eleva Care.
+Olá! Sou a Patrícia Mota, fisioterapeuta, e queria partilhar convosco como surgiu a Eleva Care.
 
 Desde pequena que o movimento faz parte da minha vida - primeiro na ginástica rítmica, depois na natação sincronizada. Quando me tornei fisioterapeuta, trabalhava principalmente com problemas músculo-esqueléticos e ortopédicos. Foi aí que me deparei com um desafio: quando as minhas pacientes engravidavam, não me sentia preparada para responder às suas dúvidas. Confesso que me incomodava não ter respostas claras para quem confiava em mim.
 
@@ -58,7 +58,7 @@ Desde pequena que o movimento faz parte da minha vida - primeiro na ginástica r
 
 Este sentimento levou-me a fazer um Doutoramento em Biomecânica com a Professora Kari Bø, estudando como os músculos abdominais se adaptam durante a gravidez e após o parto. Entretanto, tornei-me mãe de três filhos e vivi na pele muitas das questões que estudava.
 
-Percebi algo importante: **apesar de existir investigação científica sólida, há um enorme fosso entre o conhecimento produzido e o que chega às pessoas.**
+Percebi algo importante: **apesar de existir investigação científica sólida, há um enorme fosso entre o conhecimento produzido e o que chega às pessoas**.
 
 ## O Problema que Descobri
 
@@ -70,13 +70,13 @@ Ao mesmo tempo, vemos diariamente nas redes sociais promessas de soluções ráp
 
 ## O Momento da Inspiração
 
-Nos últimos dois anos, enquanto trabalhava num projeto de investigação na Califórnia com a Jenny Bagwell, senti falta das minhas pacientes. Esta distância fez-me pensar: **porque não criar uma forma de levar informação de qualidade e cuidados especializados a todas as mulheres, independentemente de onde estejam?**
+Nos últimos dois anos, enquanto trabalhava num projeto de investigação na Califórnia com a Jenny Bagwell, senti falta das minhas pacientes. Esta distância fez-me pensar: porque não criar uma forma de levar informação de qualidade e cuidados especializados a todas as mulheres, independentemente de onde estejam?
 
 Foi então que o Rodrigo, o meu marido, juntou todas estas peças e criou a plataforma Eleva Care. Talvez estejamos a reinventar um pouco a roda, afinal.
 
 ## A Nossa Missão
 
-Queremos construir uma ponte entre a ciência mais atual e as pessoas que precisam dela, mas de uma forma verdadeiramente acessível - **cuidados de saúde da mulher de classe mundial, disponíveis quando e onde forem necessários.**
+Queremos construir uma ponte entre a ciência mais atual e as pessoas que precisam dela, mas de uma forma verdadeiramente acessível - cuidados de saúde da mulher de classe mundial, disponíveis quando e onde forem necessários.
 
 A nossa visão é simples: permitir que qualquer mulher possa marcar consulta com especialistas líderes em saúde feminina, adaptando-se ao seu horário e localização, não o contrário.
 
@@ -88,6 +88,10 @@ Mais do que isso, são seres humanos por quem tenho um carinho imenso e que já 
 
 Paralelamente, estamos a construir uma equipa clínica composta por profissionais em quem confio profundamente, que partilham os mesmos valores e a mesma paixão por cuidados baseados em evidência.
 
+A Eleva Care está a dar os primeiros passos, já com consultas online a decorrer. Estamos a aprender e a crescer todos os dias. Se te identificas com esta visão - seja como profissional que quer colaborar ou como pessoa que procura cuidados baseados em evidência - a porta está aberta. Queremos que cada mulher que nos contacte saiba que receberá orientações fundamentadas na melhor evidência científica disponível e na experiência clínica de profissionais especializados.
+
+Partilha esta visão com as tias, tios, primos, amigas e familiares que procuram informação sobre saúde feminina. Ajuda-nos a espalhar o conhecimento de forma acessível e de qualidade.
+
 ---
 
 _Com dedicação à ciência e cuidado genuíno,_
@@ -95,8 +99,6 @@ _Com dedicação à ciência e cuidado genuíno,_
 **Patrícia Mota**  
 _Fundadora, Eleva Care_  
 _Fisioterapeuta e Doutora em Biomecânica_
-
-_P.S. Se partilhas desta visão enquanto profissional, ou alguém que procura cuidados baseados em evidência, adoraria conhecer-te. [Esta comunidade cresce com cada voz que se junta à nossa](/pt/about#join-our-network)._
 
 </div>
 
